--- a/index.html
+++ b/index.html
@@ -3,50 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Microtech IT Service — Official Microsoft & IT Support Partner</title>
+  <title>Microtech IT Service — Professional Microsoft & IT Support</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body {font-family: 'Segoe UI', Arial, sans-serif; margin:0; background:#f8f9fa; color:#333;}
+    body {font-family: 'Segoe UI', Arial, sans-serif; margin:0; background:#f5f6fa; color:#333;}
     header {background:#0078d7; color:white; padding:15px 40px; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
     header h1 {margin:0; font-size:24px; display:flex; align-items:center;}
     header img {height:40px; margin-right:10px;}
-    header .tollfree {font-weight:bold;}
-    nav a {color:white; text-decoration:none; margin:0 15px; font-weight:500;}
+    .tollfree {font-weight:bold; font-size:18px;}
+    nav a {color:white; text-decoration:none; margin:0 12px; font-weight:500;}
     nav a:hover {text-decoration:underline;}
 
-    .hero {background:#eaf3ff; text-align:center; padding:60px 20px;}
-    .hero h2 {font-size:32px; margin-bottom:15px;}
-    .hero p {font-size:18px; color:#555;}
-    .brand-slider {display:flex; overflow:hidden; animation:slide 20s linear infinite; justify-content:center; align-items:center; margin-top:30px;}
-    .brand-slider img {height:60px; margin:0 40px; filter:grayscale(100%);}
-    @keyframes slide {
-      0% {transform:translateX(0);}
-      100% {transform:translateX(-50%);}
-    }
+    .hero {background:linear-gradient(to right,#0078d7,#005ba1); color:white; text-align:center; padding:70px 20px;}
+    .hero h2 {font-size:36px; margin-bottom:15px;}
+    .hero p {font-size:18px; color:#e6e6e6; max-width:700px; margin:auto;}
+    .hero button {background:white; color:#0078d7; border:none; padding:12px 25px; border-radius:5px; margin-top:25px; font-weight:bold; cursor:pointer;}
+    .hero button:hover {background:#eaf3ff;}
 
-    .stats {display:flex; flex-wrap:wrap; justify-content:center; background:#fff; padding:40px 0;}
-    .stat-box {flex:1 1 200px; text-align:center; margin:10px;}
-    .stat-box h3 {font-size:28px; color:#0078d7;}
+    .brand-slider {display:flex; overflow:hidden; animation:slide 20s linear infinite; justify-content:center; align-items:center; margin-top:40px;}
+    .brand-slider img {height:60px; margin:0 40px; filter:grayscale(100%);}
+    @keyframes slide {0%{transform:translateX(0);}100%{transform:translateX(-50%);}}
+
+    .stats {display:flex; flex-wrap:wrap; justify-content:center; background:#fff; padding:50px 0;}
+    .stat-box {flex:1 1 220px; text-align:center; margin:15px;}
+    .stat-box h3 {font-size:32px; color:#0078d7;}
     .stat-box p {font-weight:500;}
 
-    .about, .services, .faq, .testimonials {padding:60px 20px; background:white; margin:20px auto; max-width:1200px; border-radius:12px; box-shadow:0 0 10px rgba(0,0,0,0.05);}
-    .about h2, .services h2, .faq h2, .testimonials h2 {text-align:center; color:#0078d7; margin-bottom:30px;}
+    section {max-width:1200px; margin:40px auto; background:white; padding:50px 25px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.05);}
+    h2 {text-align:center; color:#0078d7; margin-bottom:30px;}
 
-    .about p {max-width:800px; margin:0 auto; text-align:center; line-height:1.6;}
+    .about p, .industries p {text-align:center; max-width:900px; margin:10px auto 30px auto; line-height:1.6;}
+    .about ul {max-width:800px; margin:auto; line-height:1.6;}
+    .about li {margin:10px 0;}
 
-    .service-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:20px; margin-top:30px;}
-    .service {background:#f2f6ff; border-radius:10px; padding:20px; text-align:center; transition:0.3s;}
-    .service:hover {background:#0078d7; color:white; transform:translateY(-5px);}
-    .service i {font-size:40px; margin-bottom:10px;}
+    .service-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:25px;}
+    .service {background:#f3f6ff; border-radius:10px; padding:25px; text-align:center; transition:0.3s;}
+    .service:hover {background:#0078d7; color:white; transform:translateY(-6px);}
+    .service i {font-size:42px; margin-bottom:15px;}
+    .service h3 {margin-bottom:10px;}
+
+    .industries-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; text-align:center;}
+    .industries-grid div {background:#f8faff; border-radius:10px; padding:20px; font-weight:500; transition:.3s;}
+    .industries-grid div:hover {background:#0078d7; color:white;}
 
     .faq-item {margin-bottom:15px; border-bottom:1px solid #ddd; padding-bottom:10px;}
     .faq-item summary {font-weight:bold; cursor:pointer; color:#0078d7;}
     .faq-item p {margin:10px 0 0 0; color:#555;}
 
-    .testimonials-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px; margin-top:30px;}
+    .testimonials-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:30px;}
     .testimonial {background:#f9f9f9; border-radius:10px; padding:20px; text-align:center; box-shadow:0 0 5px rgba(0,0,0,0.05);}
     .testimonial p {font-style:italic; color:#555;}
     .testimonial h4 {margin-top:10px; color:#0078d7;}
+
+    .contact form {display:flex; flex-direction:column; max-width:500px; margin:auto;}
+    .contact input, .contact textarea {margin:8px 0; padding:12px; border-radius:5px; border:1px solid #ccc;}
+    .contact button {background:#0078d7; color:white; border:none; padding:12px; border-radius:5px; font-weight:bold; cursor:pointer;}
+    .contact button:hover {background:#005ba1;}
 
     footer {background:#0d1b2a; color:white; text-align:center; padding:30px 20px;}
     footer a {color:#aad4ff; margin:0 10px; text-decoration:none;}
@@ -63,14 +75,16 @@
     <a href="#">Home</a>
     <a href="#">About</a>
     <a href="#">Services</a>
+    <a href="#">Industries</a>
     <a href="#">Contact</a>
-    <a href="#">Products</a>
   </nav>
 </header>
 
 <section class="hero">
   <h2>Your Trusted Microsoft & IT Support Partner</h2>
-  <p>Providing expert help for Microsoft, Windows, Antivirus, Networking, and Printer Issues 24/7</p>
+  <p>Empowering businesses and individuals through reliable IT support, cloud computing, and advanced cybersecurity solutions — available 24/7.</p>
+  <button>Get Instant Support</button>
+
   <div class="brand-slider">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_logo.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/HP_logo_2012.svg">
@@ -82,67 +96,85 @@
 </section>
 
 <section class="stats">
-  <div class="stat-box">
-    <h3>98K+</h3>
-    <p>Happy Customers Worldwide</p>
-  </div>
-  <div class="stat-box">
-    <h3>450K+</h3>
-    <p>Connected Users</p>
-  </div>
-  <div class="stat-box">
-    <h3>1.2M+</h3>
-    <p>Issues Resolved</p>
-  </div>
+  <div class="stat-box"><h3>150K+</h3><p>Happy Customers</p></div>
+  <div class="stat-box"><h3>600K+</h3><p>Devices Connected</p></div>
+  <div class="stat-box"><h3>2.5M+</h3><p>Issues Resolved</p></div>
+  <div class="stat-box"><h3>98%</h3><p>Customer Satisfaction</p></div>
 </section>
 
 <section class="about">
-  <h2>About Us</h2>
-  <p>Microtech IT Service is a leading independent tech support provider offering assistance for Microsoft products, antivirus setup, printer configuration, networking, and cloud services. Our mission is to deliver seamless IT experiences to individuals and businesses worldwide.</p>
+  <h2>About Microtech IT Service</h2>
+  <p>At Microtech IT Service, we are dedicated to simplifying technology for everyone. With over a decade of experience in IT solutions, we deliver innovative support for Microsoft products, antivirus software, printers, and cloud platforms. Our certified experts ensure your systems stay secure, fast, and efficient.</p>
+  <ul>
+    <li><b>Our Mission:</b> To provide reliable, transparent, and affordable IT support solutions worldwide.</li>
+    <li><b>Our Vision:</b> To empower individuals and businesses to use technology with confidence and ease.</li>
+    <li><b>Why Choose Us:</b> 24/7 support, certified technicians, and guaranteed issue resolution.</li>
+  </ul>
 </section>
 
 <section class="services">
-  <h2>Our Services</h2>
+  <h2>Our Core Services</h2>
   <div class="service-grid">
-    <a class="service" href="#"><i class="fa-solid fa-cloud"></i><h3>Cloud Computing</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-network-wired"></i><h3>Networking Solutions</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-desktop"></i><h3>Microsoft & Windows Support</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-shield-halved"></i><h3>Antivirus Installation</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-print"></i><h3>Printer & Scanner Setup</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-globe"></i><h3>Web Design & Development</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-database"></i><h3>Data Backup & Recovery</h3></a>
-    <a class="service" href="#"><i class="fa-solid fa-user-shield"></i><h3>Cybersecurity Services</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-cloud"></i><h3>Cloud Computing</h3><p>Cloud migration, hosting, and backup services for secure remote access and scalability.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-network-wired"></i><h3>Networking Solutions</h3><p>LAN, WAN, Wi-Fi setup, and troubleshooting for home or enterprise networks.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-desktop"></i><h3>Microsoft & Windows Support</h3><p>Assistance with Windows installation, activation, drivers, and update issues.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-shield-halved"></i><h3>Antivirus & Security</h3><p>Installation and optimization of antivirus tools to keep your devices safe.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-print"></i><h3>Printer & Peripheral Support</h3><p>Setup and troubleshooting for printers, scanners, and connected devices.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-globe"></i><h3>Web Design & Development</h3><p>Modern, responsive websites tailored for businesses and personal brands.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-database"></i><h3>Data Backup & Recovery</h3><p>Secure storage and retrieval solutions for lost or corrupted data.</p></a>
+    <a class="service" href="#"><i class="fa-solid fa-user-shield"></i><h3>Cybersecurity Solutions</h3><p>End-to-end protection for data, systems, and cloud applications.</p></a>
+  </div>
+</section>
+
+<section class="industries">
+  <h2>Industries We Serve</h2>
+  <p>We provide specialized IT support to a wide range of industries with tailored solutions for specific needs.</p>
+  <div class="industries-grid">
+    <div>Corporate & Enterprises</div>
+    <div>Education & eLearning</div>
+    <div>Healthcare & Hospitals</div>
+    <div>Retail & E-commerce</div>
+    <div>Government & Public Sector</div>
+    <div>SMBs & Startups</div>
   </div>
 </section>
 
 <section class="faq">
   <h2>Frequently Asked Questions</h2>
-  <div class="faq-item"><summary>How do I contact Microtech IT support?</summary><p>You can reach us 24/7 at our toll-free number or via the contact page form.</p></div>
-  <div class="faq-item"><summary>Do you provide remote assistance?</summary><p>Yes, our experts can securely connect remotely to resolve your issues instantly.</p></div>
-  <div class="faq-item"><summary>Are your services officially affiliated with Microsoft?</summary><p>We are an independent IT service provider and not affiliated with Microsoft or any third-party brands.</p></div>
-  <div class="faq-item"><summary>What payment options do you accept?</summary><p>We accept all major credit cards and secure online payment methods.</p></div>
+  <div class="faq-item"><summary>How can I reach Microtech IT Service?</summary><p>Call us toll-free at (888) 649-7907 or use the contact form below. We’re available 24/7.</p></div>
+  <div class="faq-item"><summary>Do you provide onsite and remote support?</summary><p>Yes, we offer both remote assistance and on-site technician visits depending on the issue.</p></div>
+  <div class="faq-item"><summary>Are your experts certified?</summary><p>All our technicians are industry-certified professionals trained in Microsoft and networking technologies.</p></div>
+  <div class="faq-item"><summary>Is my data safe during remote sessions?</summary><p>Absolutely. We use encrypted, secure connections to ensure complete data privacy and integrity.</p></div>
 </section>
 
 <section class="testimonials">
-  <h2>What Our Customers Say</h2>
+  <h2>Client Testimonials</h2>
   <div class="testimonials-grid">
-    <div class="testimonial"><p>“Amazing service! Fixed my Windows issue in minutes.”</p><h4>- Sarah M.</h4></div>
-    <div class="testimonial"><p>“Professional and friendly team. Highly recommended.”</p><h4>- David R.</h4></div>
-    <div class="testimonial"><p>“They recovered my lost files safely. Thank you Microtech!”</p><h4>- Priya S.</h4></div>
-    <div class="testimonial"><p>“Best printer setup support I’ve ever experienced.”</p><h4>- James K.</h4></div>
-    <div class="testimonial"><p>“Affordable and reliable cloud migration help.”</p><h4>- Maria L.</h4></div>
-    <div class="testimonial"><p>“Quick antivirus installation and great after-support.”</p><h4>- Robert B.</h4></div>
+    <div class="testimonial"><p>“Microtech fixed my Windows activation problem in 10 minutes. Brilliant service!”</p><h4>- Linda W.</h4></div>
+    <div class="testimonial"><p>“Professional, polite, and quick to respond. My printer works perfectly now.”</p><h4>- George K.</h4></div>
+    <div class="testimonial"><p>“Best IT service for small businesses. They handle our entire network flawlessly.”</p><h4>- TechCore LLC</h4></div>
+    <div class="testimonial"><p>“Recovered my corrupted data securely. Worth every penny.”</p><h4>- Kevin J.</h4></div>
+    <div class="testimonial"><p>“Microtech is our go-to for Microsoft 365 issues. Highly reliable.”</p><h4>- GlobalSoft Inc.</h4></div>
+    <div class="testimonial"><p>“Great experience — the technician was patient and knowledgeable.”</p><h4>- Rachel F.</h4></div>
   </div>
 </section>
 
+<section class="contact">
+  <h2>Contact Us</h2>
+  <p style="text-align:center;">Need technical assistance? Our certified experts are ready to help 24/7.</p>
+  <form>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <input type="text" placeholder="Subject" required>
+    <textarea placeholder="Describe your issue" rows="4" required></textarea>
+    <button type="submit">Submit Request</button>
+  </form>
+</section>
+
 <footer>
-  <p>
-    <a href="#">Privacy Policy</a> | 
-    <a href="#">Terms & Conditions</a> | 
-    <a href="#">Disclaimer</a>
-  </p>
+  <p><a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a> | <a href="#">Disclaimer</a></p>
   <div class="disclaimer">
-    Disclaimer: Microtech IT Service is an independent technical support provider. We are not affiliated with or endorsed by Microsoft, HP, Dell, or any other third-party brand. All trademarks and brand names are the property of their respective owners.
+    Disclaimer: Microtech IT Service is an independent IT support provider and is not affiliated with Microsoft, HP, Dell, or any other third-party brands. All trademarks, logos, and brand names are the property of their respective owners.
   </div>
   <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
 </footer>
