--- a/index.html
+++ b/index.html
@@ -3,227 +3,304 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Microtech IT Service — Microsoft, Antivirus & Printer Support</title>
-  <meta name="description" content="Microtech IT Service provides expert support for Microsoft products, antivirus setup, and printer troubleshooting. Get 24/7 reliable tech assistance." />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>Microtech IT Service — Trusted Microsoft & IT Support</title>
+  <meta name="description" content="Microtech IT Service offers expert IT support, Microsoft assistance, cloud solutions, antivirus setup, networking, and web design for homes and businesses." />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      background-color: #f5f8ff;
-      color: #333;
-      line-height: 1.6;
+      font-family: "Segoe UI", "Poppins", sans-serif;
+      color: #222;
+      background: #f7f9fc;
     }
-
     header {
-      background: #004aad;
-      color: #fff;
-      padding: 15px 0;
+      background: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
-      padding-left: 5%;
-      padding-right: 5%;
+      padding: 15px 6%;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-
     .logo {
       display: flex;
       align-items: center;
+      gap: 10px;
     }
-
     .logo img {
-      width: 45px;
-      margin-right: 10px;
+      width: 40px;
     }
-
-    .tollfree {
-      font-size: 1rem;
-      background: #fff;
-      color: #004aad;
-      padding: 8px 14px;
-      border-radius: 20px;
-      font-weight: 600;
-      text-decoration: none;
+    .logo h1 {
+      color: #0067b8;
+      font-size: 1.5rem;
+      font-weight: 700;
     }
-
-    nav {
-      background: #fff;
-      text-align: center;
-      padding: 10px 0;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-
     nav a {
-      color: #004aad;
+      color: #333;
       text-decoration: none;
       margin: 0 15px;
       font-weight: 500;
       transition: 0.3s;
     }
-
     nav a:hover {
-      color: #0073ff;
+      color: #0067b8;
     }
-
-    .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1581092334641-26b1a4a8f75b?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
-      color: white;
-      text-align: center;
-      padding: 100px 20px;
-    }
-
-    .hero h1 {
-      font-size: 2.5em;
-      margin-bottom: 15px;
-    }
-
-    .hero p {
-      font-size: 1.1em;
-      margin-bottom: 25px;
-    }
-
-    .hero a {
-      background: #fff;
-      color: #004aad;
-      padding: 10px 25px;
+    .tollfree {
+      background: #0067b8;
+      color: #fff;
+      padding: 10px 20px;
       border-radius: 25px;
-      font-weight: bold;
       text-decoration: none;
-      transition: 0.3s;
+      font-weight: 600;
     }
+    .tollfree:hover { background: #004c8c; }
 
-    .hero a:hover {
-      background: #004aad;
-      color: #fff;
-    }
-
-    section {
-      padding: 60px 5%;
+    /* Hero Section */
+    .hero {
+      background: linear-gradient(120deg, #e6f0ff, #ffffff);
+      padding: 80px 8%;
       text-align: center;
     }
-
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-    }
-
-    .service-box {
-      background: #fff;
-      border-radius: 10px;
-      padding: 30px 20px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-      transition: 0.3s;
-    }
-
-    .service-box:hover {
-      transform: translateY(-8px);
-    }
-
-    .service-box i {
-      font-size: 2em;
-      color: #004aad;
+    .hero h2 {
+      color: #0067b8;
+      font-size: 2.5rem;
       margin-bottom: 15px;
     }
-
-    footer {
-      background: #002f6c;
+    .hero p {
+      font-size: 1.2rem;
+      color: #444;
+      margin-bottom: 30px;
+    }
+    .hero a {
+      background: #0067b8;
       color: #fff;
-      padding: 40px 5% 20px;
-      text-align: center;
+      padding: 12px 30px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .hero a:hover {
+      background: #004c8c;
     }
 
+    /* About Section */
+    .about {
+      padding: 70px 8%;
+      text-align: center;
+      background: #fff;
+    }
+    .about h3 {
+      color: #0067b8;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .about p {
+      color: #444;
+      line-height: 1.8;
+      max-width: 900px;
+      margin: auto;
+      font-size: 1.1rem;
+    }
+
+    /* Services */
+    .services {
+      padding: 80px 6%;
+      background: #f2f6fb;
+    }
+    .services h3 {
+      text-align: center;
+      font-size: 2rem;
+      color: #0067b8;
+      margin-bottom: 40px;
+    }
+    .service-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+    }
+    .service-card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      padding: 30px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    }
+    .service-card i {
+      font-size: 2.2rem;
+      color: #0067b8;
+      margin-bottom: 15px;
+    }
+    .service-card h4 {
+      color: #004c8c;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+    }
+    .service-card p {
+      color: #555;
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+    .service-card a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #0067b8;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    /* Contact */
+    .contact {
+      padding: 80px 8%;
+      text-align: center;
+      background: #fff;
+    }
+    .contact h3 {
+      color: #0067b8;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .contact p {
+      color: #444;
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+    }
+    .contact a {
+      background: #0067b8;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .contact a:hover { background: #004c8c; }
+
+    /* Footer */
+    footer {
+      background: #004c8c;
+      color: #fff;
+      text-align: center;
+      padding: 40px 5% 25px;
+    }
     footer a {
       color: #fff;
       text-decoration: underline;
-      margin: 0 8px;
+      margin: 0 10px;
     }
-
     footer p {
-      margin-top: 15px;
-      font-size: 0.9em;
+      font-size: 0.9rem;
       opacity: 0.8;
+      margin-top: 10px;
     }
 
     @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .tollfree {
-        margin-top: 10px;
-      }
+      .hero h2 { font-size: 1.8rem; }
+      .about h3, .services h3, .contact h3 { font-size: 1.6rem; }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <div class="logo">
-      <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Microtech Logo">
-      <h2>Microtech IT Service</h2>
-    </div>
-    <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> Toll-Free: (888) 649-7907</a>
-  </header>
-
+<header>
+  <div class="logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Logo" />
+    <h1>Microtech IT Service</h1>
+  </div>
   <nav>
     <a href="#home">Home</a>
+    <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#contact">Contact</a>
   </nav>
+  <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
+</header>
 
-  <section class="hero" id="home">
-    <h1>Reliable IT Support & Services</h1>
-    <p>Expert help for Microsoft Windows, antivirus setup, and printer troubleshooting — 24/7 support from certified technicians.</p>
-    <a href="tel:+18886497907">Call Now</a>
-  </section>
+<section class="hero" id="home">
+  <h2>Professional IT Support & Microsoft Services</h2>
+  <p>Your trusted partner for technology solutions, remote help, and business-grade IT support.</p>
+  <a href="#services">Explore Services</a>
+</section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <p>Professional IT solutions designed to keep your systems running smoothly.</p>
-    <div class="services">
-      <div class="service-box">
-        <i class="fa-brands fa-windows"></i>
-        <h3>Microsoft Product Support</h3>
-        <p>Troubleshooting and installation help for Microsoft Windows and Office tools.</p>
-      </div>
+<section class="about" id="about">
+  <h3>About Us</h3>
+  <p>Microtech IT Service is a trusted name in comprehensive IT support and managed technology solutions. From troubleshooting Microsoft products to setting up cloud systems, we offer reliable tech services for individuals and businesses alike. Our certified experts ensure seamless operation, security, and performance of your digital ecosystem.</p>
+</section>
 
-      <div class="service-box">
-        <i class="fa-solid fa-shield-virus"></i>
-        <h3>Antivirus Support</h3>
-        <p>Installation, renewal, and virus removal services for all major antivirus software.</p>
-      </div>
-
-      <div class="service-box">
-        <i class="fa-solid fa-print"></i>
-        <h3>Printer Setup & Repair</h3>
-        <p>Fix connectivity, driver issues, and configuration for HP, Canon, Epson printers.</p>
-      </div>
+<section class="services" id="services">
+  <h3>Our Core IT Services</h3>
+  <div class="service-grid">
+    <div class="service-card">
+      <i class="fa-solid fa-cloud"></i>
+      <h4>Cloud Computing</h4>
+      <p>Secure cloud migration, setup, and management for Azure, AWS, and Google Cloud.</p>
+      <a href="services/cloud.html">Learn More →</a>
     </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Our Experts</h2>
-    <p>Call our toll-free number or request a callback from our support team.</p>
-    <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
-  </section>
-
-  <footer>
-    <div>
-      <a href="#disclaimer">Disclaimer</a> |
-      <a href="#privacy">Privacy Policy</a> |
-      <a href="#terms">Terms & Conditions</a>
+    <div class="service-card">
+      <i class="fa-solid fa-network-wired"></i>
+      <h4>Networking Services</h4>
+      <p>LAN/WAN setup, router configuration, Wi-Fi optimization, and remote monitoring.</p>
+      <a href="services/networking.html">Learn More →</a>
     </div>
-    <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
-    <p id="disclaimer">Disclaimer: Microtech IT Service is an independent IT support provider and is not affiliated with Microsoft or any third-party company. Trademarks belong to their respective owners.</p>
-  </footer>
+    <div class="service-card">
+      <i class="fa-solid fa-desktop"></i>
+      <h4>Microsoft & Windows Support</h4>
+      <p>Fix activation errors, system crashes, and software compatibility issues.</p>
+      <a href="services/microsoft.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-shield-halved"></i>
+      <h4>Antivirus & Security</h4>
+      <p>Protect your devices with industry-leading antivirus installation and malware removal.</p>
+      <a href="services/security.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-server"></i>
+      <h4>Data Backup & Recovery</h4>
+      <p>Prevent data loss with secure cloud backup and fast recovery options.</p>
+      <a href="services/backup.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-globe"></i>
+      <h4>Web Design & Development</h4>
+      <p>Custom websites built with performance, security, and professional appeal.</p>
+      <a href="services/web.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-print"></i>
+      <h4>Printer & Hardware Support</h4>
+      <p>Printer setup, connectivity troubleshooting, and driver updates for all brands.</p>
+      <a href="services/printer.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-headset"></i>
+      <h4>Remote IT Helpdesk</h4>
+      <p>24/7 expert remote assistance for all your IT and software problems.</p>
+      <a href="services/remote.html">Learn More →</a>
+    </div>
+  </div>
+</section>
+
+<section class="contact" id="contact">
+  <h3>Contact Us</h3>
+  <p>Need immediate IT help? Speak directly with a certified support agent today.</p>
+  <a href="tel:+18886497907"><i class="fa-solid fa-phone"></i> Call (888) 649-7907</a>
+</section>
+
+<footer>
+  <div>
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="disclaimer.html">Disclaimer</a> |
+    <a href="#home">Home</a>
+  </div>
+  <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
